--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>Press the button!</h2>
     <form onsubmit="handleOnSubmit()">
         <input type="submit">
     </form>
